# my-research-agent

./: ARCHITECTURE.md  README.md  pyproject.toml
ids_agent/: __init__.py  config.py  orchestrator.py
ids_agent/agents/: base.py  baseline.py  codegen.py  evaluation.py  literature.py  rag_indexing.py  verification.py
ids_agent/baselines/: stdlib_baselines.py
ids_agent/db/: schema.py
ids_agent/human_loop/: cli_gate.py  gate.py  webhook_gate.py
ids_agent/plugins/: README.md
ids_agent/rag/: indexer.py  indices.py  retriever.py
ids_agent/tools/: registry.py
